# ChangeLog for dev-libs/hashit
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/hashit/ChangeLog,v 1.17 2014/08/10 20:33:52 slyfox Exp $

  10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org> hashit-0.9.7.ebuild:
  QA: drop trailing '.' from DESCRIPTION

  10 May 2012; Agostino Sarubbo <ago@gentoo.org> -hashit-0.9.3.ebuild,
  -hashit-0.9.4.ebuild, -hashit-0.9.6.ebuild:
  Remove old

  18 Dec 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> hashit-0.9.7.ebuild:
  x86 stable wrt bug #393829

  17 Dec 2011; Agostino Sarubbo <ago@gentoo.org> hashit-0.9.7.ebuild:
  Stable for AMD64, wrt bug #393829

*hashit-0.9.7 (10 Jun 2010)

  10 Jun 2010; Patrick Lauer <patrick@gentoo.org> +hashit-0.9.7.ebuild,
  +files/hashit-0.9.7-pkgconfig.patch:
  Bump, fix of pkgconfig bits. Thanks to dabbott for the patch, fixes
  #321533

  23 Sep 2009; Patrick Lauer <patrick@gentoo.org> hashit-0.9.3.ebuild:
  Remove virtual/libc

*hashit-0.9.6 (24 Apr 2009)

  24 Apr 2009; Patrick Lauer <patrick@gentoo.org> +hashit-0.9.6.ebuild:
  Bump to 0.9.6, now using cmake. Thanks to Chris Salch for the new ebuild,
  fixes #265787

  25 Dec 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing pyrania from metadata.xml as per #26352. Assigning to
  maintainer-needed.

  21 Mar 2007; Markus Nigbur <pyrania@gentoo.org> hashit-0.9.4.ebuild:
  Handling -fPIC for x86_64. Fixed bug #167628.

*hashit-0.9.4 (16 Nov 2006)

  16 Nov 2006; <pyrania@gentoo.org> +hashit-0.9.4.ebuild:
  Upgraded version, fixes bug #151723.

  04 May 2005; Jan Brinkmann <luckyduck@gentoo.org> hashit-0.9.3.ebuild:
  added ~amd64 to KEYWORDS, fixes #91461

  07 Nov 2004; <pyrania@gentoo.org> hashit-0.9.3.ebuild:
  Added --enable-REENTRANT.

  06 Nov 2004; <pyrania@gentoo.org> -hashit-0.9.1.ebuild,
  hashit-0.9.3.ebuild:
  New homepage location. Removed old version.

  27 Oct 2004; <pyrania@gentoo.org> hashit-0.9.1.ebuild,
  hashit-0.9.3.ebuild:
  Stable on x86.
