@@ -3,13 +3,25 @@ Hash: SHA256
 
 AUX hashit-0.9.7-pkgconfig.patch 782 SHA256 e29e7f3f73268ca6dd5091262487ae0f4d1362f0401a29fa741926b6efc89696 SHA512 dcafb388565779ae6a087b55dd31fc84879768c6a23edcf07ff0329a6a962edc83b67a3276bf8d4da853eddd132a500b094ac5ac8c950ef9bc2586925a19315d WHIRLPOOL cabae9dae68a0f480f62997011daa0028907c32182355536374133d9a55e41fdd78b908722ca0e315c03e3fa5548eb421b2b44168338dff2202492a92f016b46
 DIST hashit-0.9.7.tar.bz2 16368 SHA256 8d912ba9186ca23d4a1b22293cdaa4a907397bb02aa93c5e82c50752f505bf7c SHA512 ce692cc1dfec12f2173f39c32f24ab96223feae6fca5c5ea1bc9dc815be4113936741c620e08cba35feeea26288503d1a42e6a4fe14cf2f854915e5bebcf4eff WHIRLPOOL bf7216b82295f9ed4ebc5a6801a42decae3c74c0c8e53042f0688efe096410442af9e5a4fcb19577fbece7ec791eb8645841b32ff71ed33acdbaed8ad1c285ae
+EBUILD hashit-0.9.7-r1.ebuild 592 SHA256 0329a2de8dcbc25d776d620a02fd9e4c9b90ffed6186c16cc1329a36532ba33e SHA512 9c3286cfd250dc6b0aa226345ab8be2a4dff75b3647b851ea96516a547f76c4db438cb31da091c5c642dbfc0ebcadfed2250f7632d8cb7a0165453c2067e330e WHIRLPOOL 5c7de2551d52ae0d344469a9b51aec498d5df96f5405a94f1bed9f94be076946f1880f513e64edee1ed1988364a110a78084c4d48e3602681122f916be246d7b
 EBUILD hashit-0.9.7.ebuild 635 SHA256 3bffc616da5fe02313a9c8fe438bd3d2a57093f1fc40d7bb4c4506abccf2f11e SHA512 2062f7df74366d35ad22541614a3b8a46a583b0365c0d116e85a07a4fbe8a3359272924914d0efd8aa78f992ea13a5176bd23bee0ff6890e483050ec4384395a WHIRLPOOL 8673cc1c482f1e050577cb3049eebaa4af3c0a3f65e4e377bfc286b3d31aa7c024eca03e6cdd35bac52563474931077ae47c46b9720f3fa32d7acfc2a2ef192e
-MISC ChangeLog 2312 SHA256 b4585e9c533adc46ccf43511bb9c22ab3e07c3532ffcd68b05c2bdf9bf823636 SHA512 6fb171b328c1f6f1d0e946c1c03e86ad94ff976299f5177342e1f94efd317cadb04530e8530776fd88e3cc0a325b6b5043e5b9a67f7d4e2ff61b0d0c19412203 WHIRLPOOL bb35ab062f0d43af6f278dea1b626d91dbbb6a22bfc5898455e47407edb836d027df0589024e9cc8d61318f912c40fdee333636a9f56df9f2ab015d9a98b647b
+MISC ChangeLog 2451 SHA256 273844eb0528495253a5796a04d14cae9b55a03fa2c7acc28481fa8bdb08635f SHA512 7fa9e742206e01444090845c672160963a9eb4a5ed8e4da0be99396dcdce5be36a167ade55020eb4b5d104506631f6affeafdbc19e4ba69ed36af25e5c1589ea WHIRLPOOL c25a1af727f8ec0c2ed76a210624ae629b96d5dae201875cbaea8b455f2589aa7261e14e42bc803b01e42e0a8131faff4d7f44f5b7bbfb1440f9c9f9a3dda3ea
 MISC metadata.xml 214 SHA256 0e019c1dee563e5b23815be471ae1b65fcaf721a91ec48037446d41ca787d3e5 SHA512 701b8c51f43f8660d40700929c243a2dae9f19dcbc7b8eca877e20eadc1ae2e0c84f7c7d8c3cb576055c1a49a55e9c759ef469eeda67026ce252d341937f6691 WHIRLPOOL 977119e736e0795137df14faae681f7fa07ba8297a19ef4a7d7b93de7efceaed16f7103f179a762be41b8849c33c535b55d16d2fd0ea795df0525592752e0156
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.0
 
-iEYEAREIAAYFAlPn1zEACgkQcaHudmEf86oPjACfVnI+C0/6VSsymGqAZudzwmRR
-t18An17c3zNxeON6rAhGjIkPFY1jp+j7
-=SE5g
+iQJiBAEBCABMBQJVIAsRRRSAAAAAABQAKGlzc3Vlci1mcHJAbm90YXRpb25zOTc5
+MTY5NkQ3RDM3NkRBN0U5QjZGMTUwMDZCMUYzOERDQTQ1QTFFQwAKCRAGsfONykWh
+7IqIEAC8dMJVT9ZuIPrwHCixT6gGlAcSwGWVuhnCj9pKH6VpE3S9KIF3+Mz+yZH3
+s07GdnS8fJyhqJ/yy0im9RSRWA5qUS2qdta4XqG5qzBrR0gHOM4NmVoSBZhBD65K
+dfgGoXhKzgtswxOcBtGgimwd2FeAtB3ec8sbEYeDrYxGpJPhWx44O+iF7o2eDHqg
+Z6ucswCv7Uaxr9KuqOsKJ1ElK4kQh6IlC6+4Kh9bg9U3BmfcngPHcUZpZdKaQZYR
+UIS6tHgrIjNOrVgRAqxSmF9pLmiB03gwPcvEXFnhFPAsfytLGFVdA8pW4BrHHMrD
+0ZEj9meRju+5esmkz3L+x/lPLXvYxz3FZDSzrw6nb5LgmLZ1SRpvEXPujV6hp+BB
+WGmRbM8Nhq1ZsyD/AoNlgh6RGKlQ41Q/QnaIYiXPiZvo+7AnNVL6c1YWqF/Zw9KZ
+ZSHHK44b5HVcuwGdkwEAFfFCSk+AmhRk5Fx1inaHCF/tgR4vwq/dmVK4tcmyGhfg
+/ya0m4/HQReJm48hRVkCaEThz1GEGQtzLYu7mB3T9YYjq6OASR/x2OUxDqGJqcXS
+HYa+vnr4+3Y9Iafk1OdYBF3ocgjdwENLO24dcExcXIMdr5vWRHxUqu2/JS80hRN1
+987iv4a2z1O59ON2KekSCawX9kB2V7WvhqZELIaUFKFnVNXA7w==
+=7MeD
 -----END PGP SIGNATURE-----
