@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install prepare test
+DEPEND=dev-libs/glib:2 x11-libs/cairo x11-libs/pango[X] x11-libs/libX11 x11-libs/libXinerama x11-libs/libXdamage x11-libs/libXcomposite x11-libs/libXrender x11-libs/libXrandr media-libs/imlib2[X] virtual/pkgconfig x11-proto/xineramaproto sys-devel/make >=dev-util/cmake-2.8.12 userland_GNU? ( >=sys-apps/findutils-4.4.0 )
+DESCRIPTION=A lightweight panel/taskbar
+EAPI=5
+HOMEPAGE=http://code.google.com/p/tint2/
+IUSE=battery examples tint2conf
+KEYWORDS=~amd64 ~x86
+LICENSE=GPL-2
+RDEPEND=dev-libs/glib:2 x11-libs/cairo x11-libs/pango[X] x11-libs/libX11 x11-libs/libXinerama x11-libs/libXdamage x11-libs/libXcomposite x11-libs/libXrender x11-libs/libXrandr media-libs/imlib2[X] tint2conf? ( x11-misc/tintwizard )
+SLOT=0
+SRC_URI=http://tint2.googlecode.com/files/tint2-0.11.tar.bz2
+_eclasses_=cmake-utils	0430c386d85cec959d72640afd63ea91	eutils	9fb270e417e0e83d64ca52586c4a79de	flag-o-matic	c263990f1b677b0f0be0a3299f179762	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	79b635d29abf0572d6a1b0dc8e63c0e4
+_md5_=212866b93906e9dbb2829a8392204f17
