@@ -2,18 +2,26 @@
 Hash: SHA256
 
 AUX battery_segfault.patch 660 SHA256 725b414ddbaa05a27a723ac899b85c9ed21ad572bda31dd18706b92b25bab844 SHA512 2d56f4eeda038618ddaba8bc9f766566f3dc911b217d89bab98d09d00dc10baaf301afac579cc309e80c3a8eafb65911560018f3ddd571679027598a930b7f30 WHIRLPOOL 09ed06c24bf904bb929efd1ee1338a4c8451316efc3f9f9f33fdbf452ee710b759e41184a5d97ac53952d2baf29bec4d87cbb72282022fd01e628d90b27e3f62
-DIST tint2-0.11.tar.bz2 91716 SHA256 fe106e6a6057d2631abddde9f82d3fd4fb1985c4fb93f10d3886417a9e22471d
+DIST tint2-0.11.tar.bz2 91716 SHA256 fe106e6a6057d2631abddde9f82d3fd4fb1985c4fb93f10d3886417a9e22471d SHA512 db88c17780d24b82badbedbce4518d736dfcb2a730ff500bcb36f2b32f65271c2424f0c2a34981f9d3af033b84252db0c8217e2dd7ca57f9a0eadbc98796115c WHIRLPOOL 4c497995bc5713199a8e624ebfa463edbd610b6d948f1cbfce11ec78e4cd2cd6fad51bd58937b0fce343bb86a29a35bc40eec2bafb687c6ee89355bceb5486ec
 EBUILD tint2-0.11-r1.ebuild 1295 SHA256 d23bf038e7a2cf674772c2fdd2ef16385d15454532b326ba90c95c4b3069e4b3 SHA512 c1d2f5b9764bef84c40a87fa763f17cf31db6d6200a524e5e4d07486bbd5e55f7492f6d2fdbef08df192dfda4968477fbc141545ad836cdc75c53de2deb8bb04 WHIRLPOOL 017f753e928b9be636c74d382df9814cae9722aec9feefa67756d1539e3d479817c40fe654236871eca6d5dee7877f22273c4d471c4b3edaa1338611dd745989
-MISC ChangeLog 4374 SHA256 c11e9aa555a6b95e817831ba028ce5324862dab1dfcc76b2fcaa950af3e9676d SHA512 b743abad66b1ed3096f23039985d5c5f1724d710f87b3732602eda303d89f4fca03016793be8d77593fd46bfd3592d399eb1ca12c96358f28e5c564ac18d7057 WHIRLPOOL 4f7fdd4826cc2114dcd496bdd3e8cba2b3bcc5a9646a5bde5a7088f3133f065bc1c111b377dbec887154c5013b9ee50893351b325854a87d21643592b943310d
+EBUILD tint2-0.11-r2.ebuild 1281 SHA256 bfee3d1181e93bca9d1675a027fff4d457b8565d41843118a4934eea46527314 SHA512 04c908557c8ac09872427c494a43f13d29b8184ddd89c68b8909aabdb3fde08b65e5a8883e807927d5033244cf5e0c5d85fe2947c51e440d907e6e03f1878424 WHIRLPOOL 181279f39bb8fcd911e01043970a59342d937b9138e852af5cbdfb15a5adbe63f293552f00fe127a1366a5aa4428016da59e977210a0fdfda3a413a78495d74b
+MISC ChangeLog 4510 SHA256 628e6d16b1feb9ce8417d565318b5936bdf64691edf257c85d906221b480024c SHA512 42b638c308fb1c8868ba99eed0d8fa836e32c428f939820cd630e919cfea7541feb5111e7fa7e222f2dfc815c9c3d3d0da61e9484f4aeb0a770228f078afa1ea WHIRLPOOL 43a2c2daf8f0ae3274f386934cb5a2db7050dbbdeb7f096f958401a173bb757e12b67045b9e8f745de0ebe02816727df3ba7016b43053c10def21246bf4fb818
 MISC metadata.xml 838 SHA256 af125884806358d1f4c3d86d719e333b4c15b3194954379475b7721e2f37523e SHA512 4ff2e7a8ef1c322172463a4c0c22587efcaa1e9f57d2dd83f0caf1ede51ad900d08e8516ff3639324e15c084c87b08b10ff36b59ed7c2a22a88d11c517090f70 WHIRLPOOL d0fcf85af4a587f60cd9d138590b54698bb49528a36d89a810584cdfba59296e21d078a642a0d1238a4031cb663670aae63141264eecb843e41cfae02cdfd8d2
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2.0
 
-iQEcBAEBCAAGBQJTCK1vAAoJEMOx0zmdw4Z1tXYH/iEGIg41hRZTPYNNeAVlbz5b
-bTHf55H8iYRr6K2lvHuKpMl/j/m/UjQIFdyeYdtovj3MdnHl1Gc0CH8rUcZJVNjf
-+b/sqlaLX8zpJ38WDbAqo1Vt9A6dwP4wyb2vyzk1lAp8g2MeOVeSFkbRQ6yOVRlG
-Ls09Z50rS8DGM+0IzYuEeICkNv5pOOg6eA9QxVbo6MXQ3uU7EYb6dzHG1AEm92ns
-rRqudtoUm1hcRKIBZd5+zpCU9+4J9e2pYU+okZl134VTjbWj1PMuw7+2dmhkP6s3
-uIB5+mkw8vMyQKKRNhtF8+vKpbyIgodolFZ59E0s8FGh6SxnatD521EnC2UUKks=
-=2gZ0
+iQJiBAEBCABMBQJVIA4XRRSAAAAAABQAKGlzc3Vlci1mcHJAbm90YXRpb25zOTc5
+MTY5NkQ3RDM3NkRBN0U5QjZGMTUwMDZCMUYzOERDQTQ1QTFFQwAKCRAGsfONykWh
+7N3rEADGKxwmHuOQajfBzmRcmTysGm9DoQWqJuyoVeph6DeV0ZuYhvHPv6Cu92fY
+q/zhs1fHuuR4BIjgdm5HHcTTPutyVmibO9w5wKj3uCcBB6uLGcryB2UtsErLdI5c
+0O1H1klxyccA7C3wgy1jra+sDf8ZpzqFC9Jfw90nGH79Nv7bjCfwWkt3jh3n2Lzs
+5eH9ORWC/QscRkVhuOZmLJYJf1n9WjmfvujllrjbDYDTfwM4kg0YefgN0s1sC9Xp
+8vHj7rF99xNw1RPq91tVbG08gyAno4oTeQmomXjtafEIKxsU4gc8OwC2G4v+5nqb
+fhMfsq5xIrsCL2f0vXOTZNl9Q9dOzWcB5CwcyUryvCR4oH3ZUbdY4gG2JcCArEhd
++arm4ayeWjo4o/4QfS6e7+dQEI2HVq1fqi9F7d+MZiMwDZdDDvF0yc+TJhSTtyK2
+dEnqhxFhl9HgwxSKNOgp+0XT85dORXL2ltJKjLHwZ5zMi+LRznQGv77whU7UrTlN
+Rg9ppNd39DxdakzEi0N1lCWVEfN6Pbn3dqxS+PunIDRSit7/bmLWv6hFPMITgUzq
+GzKCeHoaPbyDWg+wUo3q2uMNX8RLaD8CHFHIWllXFWoF7xfazEJjkeOgsriNC1dd
+irK2IQlyBptsQWtSYB1d+HeBKv1xR9ELetKSGOw3OWJWGw5nhg==
+=+RJV
 -----END PGP SIGNATURE-----
