@@ -1,6 +1,11 @@
 # ChangeLog for x11-misc/tint2
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/tint2/ChangeLog,v 1.27 2014/02/22 14:00:14 idl0r Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/tint2/ChangeLog,v 1.28 2015/04/04 16:15:21 kensington Exp $
+
+*tint2-0.11-r2 (04 Apr 2015)
+
+  04 Apr 2015; Michael Palimaka <kensington@gentoo.org> +tint2-0.11-r2.ebuild:
+  Migrate to EAPI 5.
 
   22 Feb 2014; Christian Ruppert <idl0r@gentoo.org> metadata.xml:
   Remove myself as maintainer
