@@ -1,6 +1,11 @@
 # ChangeLog for dev-libs/hashit
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/hashit/ChangeLog,v 1.17 2014/08/10 20:33:52 slyfox Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/hashit/ChangeLog,v 1.18 2015/04/04 16:02:28 kensington Exp $
+
+*hashit-0.9.7-r1 (04 Apr 2015)
+
+  04 Apr 2015; Michael Palimaka <kensington@gentoo.org> +hashit-0.9.7-r1.ebuild:
+  Migrate to EAPI 5.
 
   10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org> hashit-0.9.7.ebuild:
   QA: drop trailing '.' from DESCRIPTION
